# robot_gazebo_sim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  IMU_ISSUE_NOTES.md  README.md  TEST_RESULTS.md  TROUBLESHOOTING.md  frames_2025-10-23_17.23.18.gv  package.xml  test_imu.sh  test_robot_movement.sh  test_simulation.sh
.github/: copilot-instructions.md
interfaces/srv/: PowerDataRead.srv
launch/: full_sim.launch.py  gazebo_sim.launch.py  rviz_sim.launch.py  sim_bringup.launch.py  sim_navigation.launch.py
params/: ekf_sim.yaml  navigation_sim.yaml  slam_toolbox_sim.yaml
rviz/: sim_config.rviz
scripts/: fake_imu_publisher.py  power_data_read_service.py
urdf/: base.urdf.xacro  tetra_base.xacro  tetra_gazebo.xacro
worlds/: empty_world.sdf  tetra_office.sdf
